--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         	elapsed = 0
         }
         sprite.x = 100.0 + Math.cos(elapsed/50.0) * 100.0;
+        sprite.y = 100.0 + Math.sin(elapsed/50.0) * 100.0;
         // console.log(elapsed, " ",sprite.x);
       });
     </script>
